<resources>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="default_web_client_id" translatable="false">AIzaSyClwaN3xd9Q_fACKFdHks_Y1-N_4VXSLoA</string>
    <string name="btn_urdu">Urdu</string>
    <string name="btn_arabic">Arabic</string>
    <string name="btn_english">English</string>
    <string name="app_name">Automotive App</string>
    <string name="profile">پروفائل</string>
    <string name="change_language">زبان تبدیل کریں</string>
    <string name="settings">ترتیبات</string>
    <string name="contact_us">ہم سے رابطہ کریں</string>
    <string name="logout">لاگ آؤٹ</string>
    <string name="add_listing">اشتہار شامل کریں</string>
    <string name="top_brands_we_work_with">ہمارے ساتھ ٹاپ برانڈز</string>
    <string name="our_services">ہماری خدمات</string>
    <string name="home">Home</string>
    <string name="listings">Listings</string>
    <string name="chauffeur_service">Chauffeur Service</string>
    <string name="sign_out">Sign Out</string>
    <string name="al_hamdan_automotive">Al Hamdan Automotive</string>
    <string name="new_car_title">نئی 2024 آڈی اے 5</string>
    <string name="model_year">ماڈل سال</string>
    <string name="exterior_colour">بیرونی رنگ</string>
    <string name="model">ماڈل</string>
    <string name="condition">حالت</string>
    <string name="price">قیمت</string>
    <string name="mazda">مازڈا</string>
    <string name="brand_lamborghini">LAMBORGHINI</string>
    <string name="brand_aston_martin">ASTON MARTIN</string>
    <string name="brand_ferrari">FERRARI</string>
    <string name="brand_maserati">MASERATI</string>
    <string name="brand_mercedes_benz">MERCEDES BENZ</string>
    <string name="brand_ford">FORD</string>
    <string name="brand_bugatti">BUGATTI</string>
    <string name="brand_mclaren">MCLAREN</string>
    <string name="brand_rolls_royce">ROLLS ROYCE</string>
    <string name="brand_bmw">BMW</string>
    <string name="brand_nissan">NISSAN</string>
    <string name="brand_lexus">LEXUS</string>
    <string name="buy_a_car">Buy A Car</string>
    <string name="rent_a_car">Buy A Car</string>
    <string name="preferences">Preferences</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Phone">Phone</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="I_agree_with_terms_and_conditions">I agree with terms and conditions</string>
    <string name="Conform_Password">Conform Password</string>
    <string name="Executive_Sedan">Executive Sedan</string>
    <string name="Passengers">1-3_Passengers</string>
    <string name="Suitcases">2_Suitcases</string>
    <string name="Premium_Sedan">Premium Sedan</string>
    <string name="People_Mover">People Mover</string>
    <string name="urdu_Suitcases">6 Suitcases</string>
    <string name="Select_Language">Select Language</string>
    <string name="Multi_purpose_vehicles_will_alleviate_the_stress_of_any_journey_whilst_appearing_sleek_and_confident">Multi purpose vehicles will alleviate the stress of any journey whilst appearing sleek and confident.</string>
    <string name="urdu_Passengers">1_6_Passengers</string>
    <string name="Mercedes_V_Class_or_similar">Mercedes V Class or similar</string>
    <string name="Smooth_luxurious_rides_to_wherever_you_wish_your_chauffeur_to_take_you">Smooth luxurious rides to wherever you wish your chauffeur to take you.</string>
    <string name="Audi_Q7_or_similar">Audi-Q7 or similar</string>
    <string name="SUV_Sports_Utility_Vehicle">SUV-Sports Utility Vehicle</string>
    <string name="Big_on_style_and_performance_we_have_some_of_the_worlds_truly_great_sedans">Big on style and performance we have some of the worlds truly great sedans</string>
    <string name="Modern_sophisticated_and_comprehensively_equipped">Modern sophisticated and comprehensively equipped</string>
    <string name="Mercedes_E_Class_BMW_5_Series_Genesis_or_similar">Mercedes E Class BMW 5 Series Genesis or similar</string>
    <string name="repairs_insurance_detailing_and_much_more">Repairs Insurance Detailing and much more</string>
    <string name="doorstep_car_wash">Doorstep Car Wash</string>
    <string name="comprehensive_car_care_solutions">Comprehensive Car Care Solutions</string>
    <string name="explore_a_wide_range_of_services_to_keep_your_car_in_top_condition_from_repairs_and_insurance_assistance_to_detailing_and_more_we_offer_everything_you_need_to_maintain_your_vehicles_performance_and_appearance_trust_our_experienced_team_to_provide_expert_solutions_tailored_to_your_cars_needs">Explore a wide range of services to keep your car in top condition. From repairs and insurance assistance to detailing and more, we offer everything you need to maintain your vehicle’s performance and appearance. Trust our experienced team to provide expert solutions tailored to your car’s needs.</string>
    <string name="experience_a_complete_transformation_with_our_exterior_wash_interior_cleaning_engine_detailing_waxing_and_insta_ceramix_services_all_brought_right_to_your_doorstep_dont_wait_any_longer_to_restore_your_cars_shine_download_the_MySyara_App_now_and_give_your_car_the_pampering_it_deserves">Experience a complete transformation with our Exterior Wash, Interior Cleaning, Engine Detailing, Waxing, and Insta Ceramix services—all brought right to your doorstep. Don’t wait any longer to restore your car’s shine! Download the MySyara App now and give your car the pampering it deserves!</string>
    <string name="revitalize_your_car_today_with_our_convenient_doorstep_car_wash">Revitalize Your Car Today with Our Convenient Doorstep Car Wash!</string>
    <string name="experience_a_complete_transformation_with_our_exterior_wash_interior_cleaning_engine_detailing_waxing_and_insta_ceramic_services_all_brought_right_to_your_doorstep_dont_wait_any_longer_to_restore_your_cars_shine_download_the_mysyara_app_now_and_give_your_car_the_pampering_it_deserves">Experience a complete transformation with our exterior wash, interior cleaning, engine detailing, waxing, and insta ceramic services—all brought right to your doorstep. Dont wait any longer to restore your cars shine download the MySyara App now and give your car the pampering it deserves.</string>
    <string name="high_quality_car_service_and_repairs">high-Quality_car_service_&amp;_repairs!</string>
    <string name="continue_with.....">Continue With.....</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="car_service_and_oil_change">Car Service &amp; Oil Change</string>
    <string name="login_to_your_existing_account">Login to your existing account</string>
    <string name="user_name_placeholder">Username</string>
    <string name="email_placeholder">Email</string>
    <string name="ABS">ABS</string>
    <string name="Air_Bags">Air Bags</string>
    <string name="Air_Conditioning">Air Conditioning</string>
    <string name="Alloy_Rims">Alloy Rims</string>
    <string name="AM_FM_Radio">AM/FM Radio</string>
    <string name="Cassette_player">Cassette player</string>
    <string name="CD_Player">CD Player</string>
    <string name="Climate_Control">Climate Control</string>
    <string name="Cool_Box">Cool Box</string>
    <string name="Cruise_Control">Cruise Control</string>
    <string name="DVD_Player">DVD Player</string>
    <string name="Front_Camera">Front Camera</string>
    <string name="Heated_Seats">Heated Seats</string>
    <string name="Immobilizer_Key">Immobilizer Key</string>
    <string name="Keyless_Entry">Keyless Entry</string>
    <string name="Navigation_System">Navigation System</string>
    <string name="Power_Locks">Power Locks</string>
    <string name="Power_Mirrors">Power Mirrors</string>
    <string name="Power_Steering">Power Steering</string>
    <string name="Power_Windows">Power Windows</string>
    <string name="Rear_AC_Vents">Rear AC Vents</string>
    <string name="Rear_Camera">Rear Camera</string>
    <string name="Rear_Seat_Entertainment">Rear Seat Entertainment</string>
    <string name="Rear_Speakers">Rear Speakers</string>
    <string name="Steering_Switches">Steering Switches</string>
    <string name="Sun_Roof">Sun Roof</string>
    <string name="USB_and_Auxiliary_Cable">USB and Auxiliary Cable</string>
    <string name="Enter_amount">Enter amount</string>
    <string name="Price_Range_From">Price Range From $50 To $25,000</string>
    <string name="Model_Mak">Model/Manufacturer</string>
    <string name="Search">Search</string>
    <string name="Filter">Filter</string>
    <string name="FEATURES">FEATURES</string>
    <string name="feedback_title">Feedback</string>
    <string name="company_name">Al Hamdan Automoy</string>
    <string name="head_office">Head Office:</string>
    <string name="branch_office">Branch Office:</string>
    <string name="call_us">Call Us:</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="message">Message*</string>
    <string name="submit">Submit</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="Enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="message_type">Message</string>
    <string name="Al_Tawan_Street_Rasdiya_3_Building_Sharjah_UAE">Al Tawan Street, Rasdiya 3 Building, Sharjah-UAE</string>
    <string name="Al_Hafeez_Shopping_Mall_Main_Boulevard_Gulberg_III_Lahore">Al Hafeez Shopping Mall, Main Boulevard, Gulberg III, Lahore.</string>
    <string name="Gulf_Real_Estates">Gulf Real Estates</string>
    <string name="reserved_rights">© Gulf Real Estates - All rights reserved</string>
    <string name="contact_forms_description">Design your custom contact forms with this Houzez Elementor custom widget and connect your leads with the integrated Houzez CRM.</string>
    <string name="Vehicle_Description">Vehicle Description</string>
    <string name="Your_Description">Your Description</string>
    <string name="Add_Image">Add Image</string>
    <string name="Email_Address">Email Address</string>
    <string name="Enter_your_email">Enter your email</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Upload">Upload</string>
    <string name="ASSEMBLY">Assembly</string>
    <string name="CITY">City</string>
    <string name="TRANSMISSION">Transmission</string>
    <string name="ENGINE_CAPACITY_CC">Engine Capacity (CC)</string>
    <string name="ENGINE_TYPE">Engine Type</string>
    <string name="MAKE">Make</string>
    <string name="MODEL">Model</string>
    <string name="VERSION_Optional">Version (Optional)</string>
    <string name="REGION_OF_REGISTRATION">Region of Registration</string>
    <string name="EXTERIOR_COLOR">Exterior Color</string>
    <string name="MILEAGE_KM">Mileage* (KM)</string>
    <string name="CONDITION">Condition</string>
    <string name="MODEL_YEAR">Model Year</string>
    <string name="VEHICLE_TITLE">Vehicle Title</string>
    <string name="TOTAL_PRICE">Total Price</string>
    <string name="eg_1800">e.g. 1800</string>
    <string name="Language_and_Region">Language &amp; Region</string>
    <string name="Language_Selection">Language Selection</string>
    <string name="Privacy_and_Security">Privacy &amp; Security</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Terms_of_Service">Terms of Service</string>
    <string name="Data_Security">Data Security</string>
    <string name="About">About</string>
    <string name="App_Version">App Version</string>
    <string name="Logout">Logout</string>
</resources>