<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_buyACar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_rentACar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_buy_car"
        android:title="@string/buy_a_car" />
    <item
        android:id="@+id/menu_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_car_rental"
        android:title="@string/rent_a_car" />
    <item
        android:id="@+id/menu_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>